# iscc-search

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  README.md  compose.yaml  mkdocs.yml  pyproject.toml  tox.ini  zensical.toml
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/actions/setup-python-env/: action.yml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml  main.yml  on-release-main.yml  release.yml
docs/: CNAME  architecture.md  cli.md  concept.md  deployment.md  index.md  iscc.md  legacy.md  llms.txt  modules.md  notes.md  performance-analysis.md  ranking.md  roadmap.md  simprint.md  spec.md  usearch-examples.md
docs/development/: contributing.md
docs/explanation/: architecture.md  iscc-primer.md  similarity-search.md
docs/howto/: cli.md  deployment.md  index-backends.md  rest-api.md
docs/includes/: abbreviations.md
docs/javascripts/: copypage.js
docs/overrides/: main.html
docs/reference/: api.md  configuration.md  for-coding-agents.md
docs/tutorials/: getting-started.md
iscc_search/: __init__.py  config.py  instance.py  iscc.py  log_config.json  lookup.py  metrics.py  models.py  nphd.py  options.py  processing.py  schema.py  settings.py  store.py  unit.py  utils.py
iscc_search/cli/: __init__.py  __main__.py  add.py  common.py  datasets.py  get.py  hub.py  index.py  search.py  serve.py
iscc_search/core/: sharded.py
iscc_search/indexes/: common.py
iscc_search/indexes/lmdb/: __init__.py  index.py  manager.py
iscc_search/indexes/memory/: __init__.py  index.py
iscc_search/indexes/simprint/: __init__.py  core.py  lancedb_core.py  lmdb_core.py  lmdb_core_64.py  lmdb_multi.py  lmdb_multi_64.py  lmdb_ops.py  models.py  multi.py  usearch_core.py
iscc_search/indexes/usearch/: __init__.py  index.py  manager.py
iscc_search/openapi/: CommonProperties.yaml  IsccAddResult.yaml  IsccAsset.yaml  IsccChunk.yaml  IsccChunkMatch.yaml  IsccEntry.yaml  IsccGlobalMatch.yaml  IsccMatch.yaml  IsccMatchedChunk.yaml  IsccMetadata.yaml  IsccQuery.yaml  IsccSearchResult.yaml  IsccSimprint.yaml  TextQuery.yaml  openapi.json  openapi.yaml
iscc_search/openapi/draft/: IsccChunkMatch.yaml  IsccGlobalMatch.yaml  IsccIndexEntry.yaml  IsccMatchedChunk.yaml  IsccQueryResult.yaml
iscc_search/protocols/: index.py  simprint_core.py  simprint_multi.py
iscc_search/remote/: __init__.py  client.py
iscc_search/server/: __init__.py  __main__.py  assets.py  auth.py  indexes.py  playground.py  search.py
iscc_search/simprint/: __init__.py  index.py  lmdb.md  mini.py
iscc_vdb/: __init__.py  cli.py  instance.py  iscc.py  iscc_index.py  lookup.py  metrics.py  models.py  nphd.py  nphd_index.py  protocol.py  schema.py  settings.py  store.py  types.py  unit.py  unit_index.py
iscc_vdb/indexes/: common.py
iscc_vdb/indexes/lmdb/: __init__.py  index.py  manager.py
iscc_vdb/indexes/memory/: __init__.py  index.py
iscc_vdb/openapi/: HttpError.yaml  IsccAddResult.yaml  IsccAsset.yaml  IsccIndex.yaml  IsccItem.yaml  IsccSearchResult.yaml  openapi.yaml
iscc_vdb/openapi/schemas/: IsccItem.yaml
iscc_vdb/server/: __init__.py  __main__.py  assets.py  indexes.py  search.py
scripts/: benchmark_instance.py  benchmark_metric.py  benchmark_nphd.py  bundle_openapi.py  gen_llms_full.py  nphd_benchmarks.py
tests/: conftest.py  test_cli_common.py  test_cli_index.py  test_cli_serve.py  test_config.py  test_foo.py  test_indexes_common.py  test_indexes_lmdb_index.py  test_indexes_lmdb_integration.py  test_indexes_lmdb_manager.py  test_indexes_memory_index.py  test_indexes_simprint_init.py  test_indexes_simprint_lancedb_core.py  test_indexes_simprint_lmdb_core.py  test_indexes_simprint_lmdb_core_64.py  test_indexes_simprint_lmdb_multi.py  test_indexes_simprint_lmdb_ops.py  test_indexes_simprint_models.py  test_indexes_simprint_multi.py  test_indexes_simprint_usearch_core.py  test_indexes_usearch_index.py  test_indexes_usearch_manager.py  test_indexes_usearch_persistence.py  test_indexes_usearch_simprint_approx.py  test_indexes_usearch_simprint_exact.py  test_indexes_usearch_simprint_m1.py  test_indexes_usearch_simprint_m2.py  test_instance.py  test_iscc.py  test_iscc_index.py  test_lmdb_multi_64.py  test_lookup.py  test_metrics.py  test_models.py  test_models_iscc_base.py  test_models_iscc_code.py  test_models_iscc_id.py  test_models_iscc_item.py  test_models_iscc_unit.py  test_nphd.py  (+47 more)
