[project]
name = "iscc-vdb"
version = "0.0.1"
description = "Embedded Vector Database for ISCC"
authors = [{ name = "Titusz Pan", email = "tp@py7.de" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "iscc-core>=1.2.1",
    "numba>=0.60.0",
    "platformdirs>=4.3.8",
    # Python 3.10
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-macosx_10_9_x86_64.whl ; sys_platform == 'darwin' and python_version == '3.10'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-manylinux2014_x86_64.manylinux_2_17_x86_64.whl ; sys_platform == 'linux' and python_version == '3.10'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.10'",

    # Python 3.11
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-macosx_10_9_x86_64.whl ; sys_platform == 'darwin' and python_version == '3.11'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-manylinux2014_x86_64.manylinux_2_17_x86_64.whl ; sys_platform == 'linux' and python_version == '3.11'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.11'",

    # Python 3.12
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-macosx_10_13_x86_64.whl ; sys_platform == 'darwin' and python_version == '3.12'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl ; sys_platform == 'linux' and python_version == '3.12'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.12'",

    # Python 3.13
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-macosx_10_13_x86_64.whl ; sys_platform == 'darwin' and python_version == '3.13'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-manylinux2014_x86_64.manylinux_2_17_x86_64.whl ; sys_platform == 'linux' and python_version == '3.13'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and python_version == '3.13'",
]

[project.urls]
Homepage = "https://iscc.io"
Repository = "https://github.com/iscc/iscc-vdb"
Documentation = "https://vdb.iscc.codes"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "poethepoet>=0.24.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mdformat>=0.7.22",
    "mdformat-mkdocs>=4.3.0",
    "mdformat-footnote>=0.1.1",
    "mdformat-tables>=1.0.0",
    "mdformat-gfm-alerts>=2.0.0",
    "prek>=0.2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iscc_vdb"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
files = ["iscc_vdb"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true


[tool.ruff.format]
preview = true

[tool.coverage.report]
skip_empty = true
fail_under = 100

[tool.coverage.run]
branch = true
source = ["iscc_vdb"]


[tool.poe.tasks]
format-code = { shell = "uv run ruff format .", help = "Format code files" }
format-markdown = { shell = "uv run mdformat --end-of-line lf --wrap 112 --number *.md docs", help = "Format markdown files" }
precommit = { shell = "uv run prek run"}
format = { sequence = ["format-code", "format-markdown",], help = "Format all files" }
test = { shell = "uv run python -m pytest --cov --cov-config=pyproject.toml --cov-report=xml --cov-report=term-missing", help = "Test the code with pytest" }
all = { sequence = ["format", "test",], help = "Run all pre-commit tasks: format, check, test, and docs-test" }
