[project]
name = "iscc-search"
version = "0.0.1"
description = "High-performance ISCC similarity search engine"
authors = [{ name = "Titusz Pan", email = "tp@py7.de" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.10,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "iscc-core>=1.2.1",
    "lmdb>=1.7.5",
    "msgspec>=0.19.0",
    "numba>=0.60.0",
    "platformdirs>=4.3.8",
    # Python 3.10
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-macosx_10_9_universal2.whl ; sys_platform == 'darwin' and python_version == '3.10'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.10'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.10'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.10'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp310-cp310-win_arm64.whl ; sys_platform == 'win32' and platform_machine == 'ARM64' and python_version == '3.10'",
    # Python 3.11
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-macosx_10_9_universal2.whl ; sys_platform == 'darwin' and python_version == '3.11'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.11'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.11'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.11'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp311-cp311-win_arm64.whl ; sys_platform == 'win32' and platform_machine == 'ARM64' and python_version == '3.11'",
    # Python 3.12
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-macosx_10_13_universal2.whl ; sys_platform == 'darwin' and python_version == '3.12'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.12'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.12'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.12'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp312-cp312-win_arm64.whl ; sys_platform == 'win32' and platform_machine == 'ARM64' and python_version == '3.12'",
    # Python 3.13
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-macosx_10_13_universal2.whl ; sys_platform == 'darwin' and python_version == '3.13'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-manylinux_2_26_x86_64.manylinux_2_28_x86_64.whl ; sys_platform == 'linux' and platform_machine == 'x86_64' and python_version == '3.13'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-manylinux_2_26_aarch64.manylinux_2_28_aarch64.whl ; sys_platform == 'linux' and platform_machine == 'aarch64' and python_version == '3.13'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-win_amd64.whl ; sys_platform == 'win32' and platform_machine == 'AMD64' and python_version == '3.13'",
    "usearch @ https://iscc.github.io/usearch/usearch/usearch-2.21.0-cp313-cp313-win_arm64.whl ; sys_platform == 'win32' and platform_machine == 'ARM64' and python_version == '3.13'",
    "pysimdjson (>=7.0.2,<8.0.0)",
    "loguru>=0.7.3",
    "click>=8.3.0",
    "tqdm>=4.67.1",
    "typer>=0.20.0",
    "rich>=13.7.0",
    "fastapi>=0.120.0",
    "pyyaml>=6.0.3",
    "uvicorn[standard]>=0.38.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.28.1",
]

[project.urls]
Homepage = "https://iscc.io"
Repository = "https://github.com/iscc/iscc-search"
Documentation = "https://search.iscc.codes"

[project.scripts]
iscc-search = "iscc_search.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "poethepoet>=0.24.0",
    "ruff>=0.11.5",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "mdformat>=0.7.22",
    "mdformat-mkdocs>=4.3.0",
    "mdformat-footnote>=0.1.1",
    "mdformat-tables>=1.0.0",
    "mdformat-gfm-alerts>=2.0.0",
    "prek>=0.2.9",
    "datamodel-code-generator>=0.35.0",
    "httpx>=0.28.1",
    "psutil>=7.1.2",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "openapi-spec-validator>=0.7.2",
]
semantic = [
    "iscc-sct>=0.1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["iscc_search"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
console_output_style = "classic"

[tool.ruff]
target-version = "py310"
line-length = 120
fix = true


[tool.ruff.format]
preview = true
line-ending = "lf"

[tool.coverage.report]
skip_empty = true
fail_under = 100

[tool.coverage.run]
branch = true
source = ["iscc_search"]
omit = ["iscc_search/cli/*", "iscc_search/schema.py", "iscc_search/simprint/*", "iscc_search/protocols/*", "iscc_search/server/playground.py"]

[tool.datamodel-codegen]
input = "iscc_search/openapi/openapi.yaml"
input-file-type = "openapi"
output = "iscc_search/schema.py"
output-model-type = "pydantic_v2.BaseModel"
collapse-root-models = true
disable-timestamp = true
target-python-version = "3.12"
use-subclass-enum = true
use-standard-collections = true
use-annotated = true
field-constraints = true
use-union-operator = true
strict-nullable = true
use-title-as-name = true
formatters = []


[tool.poe.tasks]
build-schema = { shell = "uv run datamodel-codegen && uv run ruff format iscc_search/schema.py", help = "Build code from openapi.yaml schemas" }
build-openapi = { shell = "uv run python scripts/bundle_openapi.py", help = "Bundle modular OpenAPI files into openapi.json" }
validate-openapi = { shell = "uv run openapi-spec-validator iscc_search/openapi/openapi.json", help = "Validate bundled OpenAPI specification" }
format-code = { shell = "uv run ruff format .", help = "Format code files" }
format-markdown = { shell = "uv run mdformat --end-of-line lf --wrap 112 --number *.md docs", help = "Format markdown files" }
precommit = { shell = "uv run prek run"}
format = { sequence = ["format-code", "format-markdown",], help = "Format all files" }
test = { shell = "uv run python -m pytest -n auto --tb=line --no-header -q --cov --cov-config=pyproject.toml --cov-report=xml --cov-report=term-missing", help = "Test the code with pytest" }
check-complexity = { shell = "uv run radon cc --min C --show-complexity --average iscc_search/", help = "Check code complexity with radon" }
all = { sequence = ["build-schema", "build-openapi", "format", "validate-openapi", "test", "check-complexity"], help = "Run all tasks" }
